Use QElapsedTimer for data engines

BUG: 336551
REVIEW: 118869